name:                programming-in-haskell
version:             0.1.0.0
-- synopsis:
-- description:
author:              ryym
copyright:           2017 ryym
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

-- programming-in-haskell
executable pih
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
